# URL_shortner

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20250609224715_create_links_table.sql  20250611072010_add_users_and_link_ownership.sql
src/: auth.rs  db.rs  errors.rs  main.rs  models.rs  routes.rs  utils.rs
