[package]
name = "url_shortner"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1" , features = ["full"]}
axum = "0.7"
sqlx = { version = "0.7" , features = ["runtime-tokio", "sqlite" , "chrono"]}
serde = { version = "1.0" , features = ["derive"]}
serde_json = "1.0"
chrono = { version = "0.4" , features = ["serde"]}
validator = { version = "0.16" , features = ["derive"]}
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3" , features = ["env-filter"]}
nanoid = "0.4"
